[package]
name = "wif-weave"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/erys/wif-weave"
keywords = ["parser", "weaving", "weave", "wif"]
categories = ["parser-implementations", "encoding"]

[dependencies]
configparser = { version = "3.1.0", features = ["indexmap"] }

[features]
async = ["configparser/async-std"]

[package.metadata.docs.rs]
all-features = true
