[package]
name = "wif-weave"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/erys/wif-weave"
keywords = ["parser", "weaving", "weave", "wif"]
categories = ["parser-implementations", "encoding"]
description = "A crate for parsing wif files used for weaving"

[dependencies]
configparser = { version = "3.1.0", features = ["indexmap"] }
indexmap = "2.9.0"
strum = { version = "0.27.1", features = ["phf", "derive"] }
thiserror = "2.0.12"

[features]
async = ["configparser/async-std"]

[package.metadata.docs.rs]
all-features = true
